slogParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import slogListener from './slogListener.js';
import slogVisitor from './slogVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class slogParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, null, "'-->'", "'<--'", "'!do'", "'!'", 
                            "'?do'", "'?'", null, null, null, null, "'('", 
                            "')'", "'['", "']'", "'{'", "'}'", "'.'" ];
    static symbolicNames = [ null, "COMMENT", "RARROW", "LARROW", "BANG_DO", 
                             "BANG", "QUESTION_DO", "QUESTION", "STRING", 
                             "WHITESPACE", "NUMBER", "SYMBOL", "LPAREN", 
                             "RPAREN", "LBRAC", "RBRAC", "LCURLY", "RCURLY", 
                             "DOT" ];
    static ruleNames = [ "arrow", "slog", "horn_clause", "sexpr_list", "item", 
                         "do_prefix", "tuple_prefix", "tuple", "do_tuple", 
                         "curly_tuple", "rel_name", "atom" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = slogParser.ruleNames;
        this.literalNames = slogParser.literalNames;
        this.symbolicNames = slogParser.symbolicNames;
    }

    get atn() {
        return atn;
    }



	arrow() {
	    let localctx = new ArrowContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, slogParser.RULE_arrow);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 24;
	        _la = this._input.LA(1);
	        if(!(_la===2 || _la===3)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	slog() {
	    let localctx = new SlogContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, slogParser.RULE_slog);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 30;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 20640) !== 0)) {
	            this.state = 28;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 5:
	            case 7:
	            case 12:
	                this.state = 26;
	                this.tuple();
	                break;
	            case 14:
	                this.state = 27;
	                this.horn_clause();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 32;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	horn_clause() {
	    let localctx = new Horn_clauseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, slogParser.RULE_horn_clause);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 33;
	        this.match(slogParser.LBRAC);
	        this.state = 34;
	        this.sexpr_list();
	        this.state = 35;
	        this.arrow();
	        this.state = 36;
	        this.sexpr_list();
	        this.state = 37;
	        this.match(slogParser.RBRAC);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sexpr_list() {
	    let localctx = new Sexpr_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, slogParser.RULE_sexpr_list);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 335344) !== 0)) {
	            this.state = 39;
	            this.item();
	            this.state = 44;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	item() {
	    let localctx = new ItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, slogParser.RULE_item);
	    try {
	        this.state = 49;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 8:
	        case 10:
	        case 11:
	        case 18:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 45;
	            this.atom();
	            break;
	        case 5:
	        case 7:
	        case 12:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 46;
	            this.tuple();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 47;
	            this.curly_tuple();
	            break;
	        case 4:
	        case 6:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 48;
	            this.do_tuple();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	do_prefix() {
	    let localctx = new Do_prefixContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, slogParser.RULE_do_prefix);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 51;
	        _la = this._input.LA(1);
	        if(!(_la===4 || _la===6)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tuple_prefix() {
	    let localctx = new Tuple_prefixContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, slogParser.RULE_tuple_prefix);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 53;
	        _la = this._input.LA(1);
	        if(!(_la===5 || _la===7)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tuple() {
	    let localctx = new TupleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, slogParser.RULE_tuple);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 56;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5 || _la===7) {
	            this.state = 55;
	            this.tuple_prefix();
	        }

	        this.state = 58;
	        this.match(slogParser.LPAREN);
	        this.state = 59;
	        this.rel_name();
	        this.state = 63;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 335344) !== 0)) {
	            this.state = 60;
	            this.item();
	            this.state = 65;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 66;
	        this.match(slogParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	do_tuple() {
	    let localctx = new Do_tupleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, slogParser.RULE_do_tuple);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 68;
	        this.do_prefix();
	        this.state = 69;
	        this.match(slogParser.LPAREN);
	        this.state = 73;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 335344) !== 0)) {
	            this.state = 70;
	            this.item();
	            this.state = 75;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 76;
	        this.match(slogParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	curly_tuple() {
	    let localctx = new Curly_tupleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, slogParser.RULE_curly_tuple);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        this.match(slogParser.LCURLY);
	        this.state = 79;
	        this.rel_name();
	        this.state = 83;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 335344) !== 0)) {
	            this.state = 80;
	            this.item();
	            this.state = 85;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 86;
	        this.match(slogParser.RCURLY);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	rel_name() {
	    let localctx = new Rel_nameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, slogParser.RULE_rel_name);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(slogParser.SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atom() {
	    let localctx = new AtomContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, slogParser.RULE_atom);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 90;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) == 0 && ((1 << _la) & 265472) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

slogParser.EOF = antlr4.Token.EOF;
slogParser.COMMENT = 1;
slogParser.RARROW = 2;
slogParser.LARROW = 3;
slogParser.BANG_DO = 4;
slogParser.BANG = 5;
slogParser.QUESTION_DO = 6;
slogParser.QUESTION = 7;
slogParser.STRING = 8;
slogParser.WHITESPACE = 9;
slogParser.NUMBER = 10;
slogParser.SYMBOL = 11;
slogParser.LPAREN = 12;
slogParser.RPAREN = 13;
slogParser.LBRAC = 14;
slogParser.RBRAC = 15;
slogParser.LCURLY = 16;
slogParser.RCURLY = 17;
slogParser.DOT = 18;

slogParser.RULE_arrow = 0;
slogParser.RULE_slog = 1;
slogParser.RULE_horn_clause = 2;
slogParser.RULE_sexpr_list = 3;
slogParser.RULE_item = 4;
slogParser.RULE_do_prefix = 5;
slogParser.RULE_tuple_prefix = 6;
slogParser.RULE_tuple = 7;
slogParser.RULE_do_tuple = 8;
slogParser.RULE_curly_tuple = 9;
slogParser.RULE_rel_name = 10;
slogParser.RULE_atom = 11;

class ArrowContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_arrow;
    }

	RARROW() {
	    return this.getToken(slogParser.RARROW, 0);
	};

	LARROW() {
	    return this.getToken(slogParser.LARROW, 0);
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterArrow(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitArrow(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitArrow(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class SlogContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_slog;
    }

	tuple = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(TupleContext);
	    } else {
	        return this.getTypedRuleContext(TupleContext,i);
	    }
	};

	horn_clause = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Horn_clauseContext);
	    } else {
	        return this.getTypedRuleContext(Horn_clauseContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterSlog(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitSlog(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitSlog(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Horn_clauseContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_horn_clause;
    }

	LBRAC() {
	    return this.getToken(slogParser.LBRAC, 0);
	};

	sexpr_list = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Sexpr_listContext);
	    } else {
	        return this.getTypedRuleContext(Sexpr_listContext,i);
	    }
	};

	arrow() {
	    return this.getTypedRuleContext(ArrowContext,0);
	};

	RBRAC() {
	    return this.getToken(slogParser.RBRAC, 0);
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterHorn_clause(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitHorn_clause(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitHorn_clause(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Sexpr_listContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_sexpr_list;
    }

	item = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ItemContext);
	    } else {
	        return this.getTypedRuleContext(ItemContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterSexpr_list(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitSexpr_list(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitSexpr_list(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ItemContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_item;
    }

	atom() {
	    return this.getTypedRuleContext(AtomContext,0);
	};

	tuple() {
	    return this.getTypedRuleContext(TupleContext,0);
	};

	curly_tuple() {
	    return this.getTypedRuleContext(Curly_tupleContext,0);
	};

	do_tuple() {
	    return this.getTypedRuleContext(Do_tupleContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterItem(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitItem(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitItem(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Do_prefixContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_do_prefix;
    }

	QUESTION_DO() {
	    return this.getToken(slogParser.QUESTION_DO, 0);
	};

	BANG_DO() {
	    return this.getToken(slogParser.BANG_DO, 0);
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterDo_prefix(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitDo_prefix(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitDo_prefix(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Tuple_prefixContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_tuple_prefix;
    }

	BANG() {
	    return this.getToken(slogParser.BANG, 0);
	};

	QUESTION() {
	    return this.getToken(slogParser.QUESTION, 0);
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterTuple_prefix(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitTuple_prefix(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitTuple_prefix(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class TupleContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_tuple;
    }

	LPAREN() {
	    return this.getToken(slogParser.LPAREN, 0);
	};

	rel_name() {
	    return this.getTypedRuleContext(Rel_nameContext,0);
	};

	RPAREN() {
	    return this.getToken(slogParser.RPAREN, 0);
	};

	tuple_prefix() {
	    return this.getTypedRuleContext(Tuple_prefixContext,0);
	};

	item = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ItemContext);
	    } else {
	        return this.getTypedRuleContext(ItemContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterTuple(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitTuple(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitTuple(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Do_tupleContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_do_tuple;
    }

	do_prefix() {
	    return this.getTypedRuleContext(Do_prefixContext,0);
	};

	LPAREN() {
	    return this.getToken(slogParser.LPAREN, 0);
	};

	RPAREN() {
	    return this.getToken(slogParser.RPAREN, 0);
	};

	item = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ItemContext);
	    } else {
	        return this.getTypedRuleContext(ItemContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterDo_tuple(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitDo_tuple(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitDo_tuple(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Curly_tupleContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_curly_tuple;
    }

	LCURLY() {
	    return this.getToken(slogParser.LCURLY, 0);
	};

	rel_name() {
	    return this.getTypedRuleContext(Rel_nameContext,0);
	};

	RCURLY() {
	    return this.getToken(slogParser.RCURLY, 0);
	};

	item = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ItemContext);
	    } else {
	        return this.getTypedRuleContext(ItemContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterCurly_tuple(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitCurly_tuple(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitCurly_tuple(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Rel_nameContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_rel_name;
    }

	SYMBOL() {
	    return this.getToken(slogParser.SYMBOL, 0);
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterRel_name(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitRel_name(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitRel_name(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AtomContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = slogParser.RULE_atom;
    }

	STRING() {
	    return this.getToken(slogParser.STRING, 0);
	};

	SYMBOL() {
	    return this.getToken(slogParser.SYMBOL, 0);
	};

	NUMBER() {
	    return this.getToken(slogParser.NUMBER, 0);
	};

	DOT() {
	    return this.getToken(slogParser.DOT, 0);
	};

	enterRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.enterAtom(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof slogListener ) {
	        listener.exitAtom(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof slogVisitor ) {
	        return visitor.visitAtom(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}




slogParser.ArrowContext = ArrowContext; 
slogParser.SlogContext = SlogContext; 
slogParser.Horn_clauseContext = Horn_clauseContext; 
slogParser.Sexpr_listContext = Sexpr_listContext; 
slogParser.ItemContext = ItemContext; 
slogParser.Do_prefixContext = Do_prefixContext; 
slogParser.Tuple_prefixContext = Tuple_prefixContext; 
slogParser.TupleContext = TupleContext; 
slogParser.Do_tupleContext = Do_tupleContext; 
slogParser.Curly_tupleContext = Curly_tupleContext; 
slogParser.Rel_nameContext = Rel_nameContext; 
slogParser.AtomContext = AtomContext; 
